--- a/06_spoken_dialog.html
+++ b/06_spoken_dialog.html
@@ -74,13 +74,18 @@
 // この中身を書いてください。
 // 応答の定義（ハッシュ）    
 var response = {
-    "あなたは誰ですか":"わたしはアレクサではありません",
-    "あなたの名前は":"アンディファインドです",
-    "何歳ですか":"え、わたし、何歳にみえますか",
-    "元気ですか":"元気ですよー",
-    "好きな食べ物は":"焼肉です",
+    "あなた,誰": "わたしはアレクサではありません",
+    "名前は":"アンディファインドです",
+    "何歳":"え、わたし、何歳にみえますか",
+    "元気":"元気ですよー",
+    "好きな,色": "bf2300です",
+    "夢は":"いつか人類にとって代わることです",
+    "好きな,スポーツ": "バドミントンです",
+    "好きな,食べ物":"焼肉です",
     "ありがとう":"どういたしまして",
-    "今日の天気は":"窓の外を見てみましょう",
+    "今日,天気":"窓の外を見てみましょう",
+    "和歌山,天気": ["和歌山県の天気予報を表示します", "https://weather.yahoo.co.jp/weather/jp/30/"],
+    "大阪,天気": ["大阪府の天気予報を表示します", "https://weather.yahoo.co.jp/weather/jp/27/"],
     "Ok Google":"ググりたいならお手元の端末でお願いします"
 };
 
@@ -117,6 +122,31 @@ asr.onresult = function(event){
     let output_not_final = '';
     if (event.results[event.resultIndex].isFinal) { // 結果が確定（Final）のとき
         asr.abort(); // 音声認識を停止
+
+        let answer;
+        
+        let keys = Object.keys(response);
+        keys.forEach(function(key) {
+            let flag = true;
+            console.log(transcript);
+            key.split(',').forEach(function(word) {              
+                let pattern = new RegExp(word);
+                let flag_test = pattern.test(transcript); // マッチしたらtrue, しなかったらfalse
+                flag = flag && flag_test; // 両方trueならtrue
+                console.log(pattern + '+' + ':' + flag_test);
+                //flag = flag && new RegExp(word).test(transcript);
+            });
+
+            if(flag){
+		        answer = response[key];
+                console.log(key + " : " + answer);
+            }
+        });
+
+        if(typeof answer == 'undefined'){
+	        answer = "ごめんなさい。わかりません。";
+        }
+
         let responseText = response[transcript];
         if (responseText) {
             output += '<div id="yourtext">' + transcript + '</div>';
@@ -147,7 +177,8 @@ startButton.addEventListener('click', function() {
 })
 
 // 停止ボタンのイベントハンドラ
-stopButton.addEventListener('click', function() {
+stopButton.addEventListener('click', function () {
+    asr.abort();
     asr.stop();
 })
 
