--- a/MDsemi_kadai.html
+++ b/MDsemi_kadai.html
@@ -87,17 +87,6 @@
 などできればよし
 */
 // この中身を書いてください。
-// 応答の定義（ハッシュ）    
-var response = {
-    "あなたは誰ですか":"わたしはアレクサではありません",
-    "あなたの名前は":"アンディファインドです",
-    "何歳ですか":"え、わたし、何歳にみえますか",
-    "元気ですか":"元気ですよー",
-    "好きな食べ物は":"焼肉です",
-    "ありがとう":"どういたしまして",
-    "今日の天気は":"窓の外を見てみましょう",
-    "Ok Google":"ググりたいならお手元の端末でお願いします"
-};
 
 const startButton = document.querySelector('#startButton'); // 開始ボタン
 const stopButton = document.querySelector('#stopButton'); // 停止ボタン
@@ -126,34 +115,42 @@ asr.continuous = true; // 継続入力をオン
 let output = ''; // 出力
 
 // 認識結果が出力されたときのイベントハンドラ
-asr.onresult = function(event){
-    let transcript = event.results[event.resultIndex][0].transcript; // 結果文字列
+asr.onresult = function (event) {
+    let transcript = event.results[event.resultIndex][0].transcript;
 
-    let output_not_final = '';
-    if (event.results[event.resultIndex].isFinal) { // 結果が確定（Final）のとき
-        asr.abort(); // 音声認識を停止
-        let responseText = response[transcript];
-        if (responseText) {
-            output += '<div id="yourtext">' + transcript + '</div>';
-            output += '<div id="answer">' + responseText + '</div>';
-            tts.text = responseText;
+    if (event.results[event.resultIndex].isFinal) {
+        asr.abort();
+        const response = processVoiceInput(transcript);
+
+        output += '<div id="yourtext">' + transcript + '</div>';
+        output += '<div id="answer">' + response + '</div>';
+
+        if (response.includes('音を再生しました')) {
+            // 音を再生した場合は、音声出力をスキップし、すぐに音声認識を再開
+            setTimeout(() => {
+                asr.start();
+            }, 1000); // 音の再生時間（1秒）後に音声認識を再開
         } else {
-            output += '<div id="yourtext">' + transcript + '</div>';
-            output += '<div id="answer">' + transcript + '</div>';
-            tts.text = transcript;
+            // それ以外の場合は、通常通り音声出力を行う
+            tts.text = response;
+            tts.onend = function (event) {
+                asr.start();
+            }
+            speechSynthesis.speak(tts);
         }
-
-        // 再生が終了（end）ときのイベントハンドラ（終了したときに実行される）
-        tts.onend = function(event){
-            asr.start(); // 音声認識を再開
-        }
-
-        speechSynthesis.speak(tts); // 再生
-    } else { // 結果がまだ未確定のとき
+    } else {
         output_not_final = '<div id="outputting">' + transcript + '</div>';
     }
     resultOutput.innerHTML = output + output_not_final;
 }
+
+// audioContext を起動するためのイベントリスナーを追加
+startButton.addEventListener('click', function () {
+    if (audioContext.state === 'suspended') {
+        audioContext.resume();
+    }
+    asr.start();
+});
 
 
 // 開始ボタンのイベントハンドラ
