--- a/MDsemi_kadai.html
+++ b/MDsemi_kadai.html
@@ -7,6 +7,12 @@
       padding-top: 1ex;
       padding-bottom: 1ex;
     }
+    #explain {
+      background-color: #f5f5f5;
+      padding-top: 1ex;
+      padding-bottom: 1ex;
+      font-size: 12px;
+    }
     h1 {
       text-align: center;
     }
@@ -57,22 +63,33 @@
 <body>
 
 <div id="top">
-<h1>課題：音声対話</h1>
+<h1>音声認識オシレーター</h1>
 
 <p>
-<button id="startButton">録音開始</button>
-<button id="stopButton">録音停止</button>
-<select id="waveformType">
-    <option value="sine">サイン波</option>
-    <option value="square">矩形波</option>
-    <option value="sawtooth">ノコギリ波</option>
-    <option value="triangle">三角波</option>
-</select>
+    <button id="startButton">録音開始</button>
+    <button id="stopButton">録音停止</button>
+    <select id="waveformType">
+        <option value="sine">サイン波</option>
+        <option value="square">矩形波</option>
+        <option value="sawtooth">ノコギリ波</option>
+        <option value="triangle">三角波</option>
+    </select>
 </p>
 </div>
 
 <p>
-<div id="resultOutput"></div>
+    <div id="explain">
+        このページは、声を使って音を再生するページです。<br>
+        「C 4を再生して」と発言すると、C4の音が再生されます。<br>
+        波形を変更したい場合は、画面左の波形選択ボックスから選択するか、<br>
+        「矩形波に変更して」と発言すると変更できます。<br>
+        再生できる音階の範囲は、C3からB5までです。<br>
+        波形の種類には、サイン波、矩形波、ノコギリ波、三角波があります。<br>
+    </div>
+</p>
+
+<p>
+    <div id="resultOutput"></div>
 </p>
 
 <script src="audio.js"></script>
@@ -87,6 +104,7 @@
 などできればよし
 */
 // この中身を書いてください。
+
 
 const startButton = document.querySelector('#startButton'); // 開始ボタン
 const stopButton = document.querySelector('#stopButton'); // 停止ボタン
